Add Lists and CSS

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>List</title>
+    <title>Homepage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="./pages/lists.html"><em>Lists</em></a>
+    <div>
+    <h1><a href="./pages/lists.html"><em>Lists</em></a></h1>
+    </div>
 </body>
 </html>
